# LexGrid

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
backend/: .gitignore  Dockerfile  __init__.py  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: .gitkeep
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  middleware.py
backend/app/api/routes/: __init__.py  health.py  metrics.py  query.py  search.py  source.py
backend/app/cache/: __init__.py  client.py  context_cache.py  query_cache.py
backend/app/embeddings/: __init__.py  batch_processor.py  client.py  streaming.py
backend/app/evaluation/: __init__.py  metrics.py  reporter.py  runner.py  test_cases.py
backend/app/ingestion/: __init__.py  chunker.py  loader.py  markdown_source.py  pipeline.py
backend/app/llm/: __init__.py  client.py  context_builder.py  prompt_builder.py
backend/app/models/: __init__.py  chunk.py  evaluation.py  metrics.py  query.py  search.py  source.py
backend/app/normalization/: __init__.py  sections.py
backend/app/retrieval/: __init__.py  hybrid.py  keyword_retriever.py  query_intelligence.py  reranker.py  vector_retriever.py
backend/app/vector_store/: __init__.py  database.py  schema.py  store.py
backend/app/workers/: __init__.py  batch_index_task.py  celery_app.py  embed_task.py  reindex_task.py
backend/scripts/: evaluate.py  ingest.py
backend/tests/: __init__.py  test_evaluation.py  test_ingestion.py  test_retrieval.py
(+4811 files in other folders)
